[gd_scene load_steps=17 format=2]

[ext_resource path="res://Cenas/Personagem.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cenas/CaixaDialogo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Elementos/Visuais/Fontes/Arial/arial.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Elementos/Visuais/Fontes/ComicSansMS/comic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Cenas/FonteLucidaConsole.tscn" type="PackedScene" id=5]
[ext_resource path="res://Elementos/Visuais/Fundo/Rede.jpg" type="Texture" id=6]
[ext_resource path="res://Elementos/Visuais/Personagens/Robo/Robo-2.png" type="Texture" id=7]
[ext_resource path="res://Elementos/Visuais/Icones/Monitor.svg" type="Texture" id=8]
[ext_resource path="res://Cenas/BotaoHorizontal.tscn" type="PackedScene" id=9]
[ext_resource path="res://Elementos/Visuais/InternetFase2/Pergunta_10.png" type="Texture" id=11]
[ext_resource path="res://Elementos/Visuais/Icones/MaoAuxiliar.svg" type="Texture" id=18]
[ext_resource path="res://Codigos/TempoTutorialEscola1.gd" type="Script" id=19]

[sub_resource type="StyleBoxFlat" id=1]
border_width_left = 5
border_width_right = 5
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=4]
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Tela/MaoAuxilicar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 5, 6.1, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 360, 1280 ), Vector2( 368, 752 ), Vector2( 368, 752 ), Vector2( 840, 768 ), Vector2( 840, 768 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Tela/MaoAuxilicar:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 3.4, 3.8, 4.1, 4.4, 4.7, 5, 6.1, 6.4, 6.7, 7, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 30.0, 30.0, 0.0, 30.0, 0.0, 30.0, 0.0, 30.0, 30.0, 0.0, 30.0, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Tela/MaoAuxilicar:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 7.1, 8, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}

[node name="TelaInternetTutorialFase2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fundo" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.607843, 1, 0.713726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FundoTextura" type="Sprite" parent="."]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
self_modulate = Color( 0.607843, 1, 0.713726, 1 )
position = Vector2( -384, -688 )
texture = ExtResource( 6 )
centered = false

[node name="Tela" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 672.0
margin_bottom = -330.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Centro" type="CenterContainer" parent="Tela"]
margin_left = 624.0
margin_top = 375.0
margin_right = 624.0
margin_bottom = 375.0

[node name="Panel" type="Sprite" parent="Tela/Centro"]
self_modulate = Color( 0.745098, 0.992157, 0.498039, 1 )
texture = ExtResource( 8 )

[node name="Coluna" type="VBoxContainer" parent="Tela"]
margin_left = 145.0
margin_top = 49.0
margin_right = 1103.0
margin_bottom = 700.0

[node name="ListaInformacoes" type="HBoxContainer" parent="Tela/Coluna"]
margin_right = 958.0
margin_bottom = 493.0

[node name="Imagem" type="TextureRect" parent="Tela/Coluna/ListaInformacoes"]
margin_right = 439.0
margin_bottom = 493.0
rect_min_size = Vector2( 439, 493 )
texture = ExtResource( 11 )
stretch_mode = 6

[node name="Separador" type="VSeparator" parent="Tela/Coluna/ListaInformacoes"]
margin_left = 443.0
margin_right = 473.0
margin_bottom = 493.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 30

[node name="Texto" type="Label" parent="Tela/Coluna/ListaInformacoes"]
margin_left = 477.0
margin_right = 958.0
margin_bottom = 493.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 30
text = "InternetFase2_Dados_10"
autowrap = true

[node name="ListaBotoes" type="HBoxContainer" parent="Tela/Coluna"]
margin_top = 497.0
margin_right = 958.0
margin_bottom = 651.0
custom_constants/separation = 40

[node name="BotaoAceitar" parent="Tela/Coluna/ListaBotoes" instance=ExtResource( 9 )]
margin_right = 459.0
margin_bottom = 154.0
disabled = true
toggle_mode = true

[node name="Texto" parent="Tela/Coluna/ListaBotoes/BotaoAceitar/ConteinerHorizontal" index="1"]
margin_right = 491.0
custom_fonts/font = SubResource( 3 )
text = "BotaoAceitar"

[node name="BotaoRecusar" parent="Tela/Coluna/ListaBotoes" instance=ExtResource( 9 )]
margin_left = 499.0
margin_right = 958.0
margin_bottom = 154.0
disabled = true
toggle_mode = true

[node name="Texto" parent="Tela/Coluna/ListaBotoes/BotaoRecusar/ConteinerHorizontal" index="1"]
margin_right = 500.0
custom_fonts/font = SubResource( 3 )
text = "BotaoRecusar"

[node name="MaoAuxilicar" type="Sprite" parent="Tela"]
position = Vector2( 360, 1280 )
rotation = 0.523599
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 18 )
offset = Vector2( 0, -200 )

[node name="Personagem" parent="." instance=ExtResource( 1 )]
texture = ExtResource( 7 )

[node name="CaixaDialogo" parent="." instance=ExtResource( 2 )]

[node name="Texto" parent="CaixaDialogo/Margem/Elementos/Campo/Margem" index="0"]
text = "Texto Apresentacao."

[node name="BotaoDireita" parent="CaixaDialogo/Margem/Elementos" index="2"]
ProximaCena = "res://Cenas/TelaInternetFase2.tscn"
TocarMusica = "res://Elementos/Sonoros/Musiscas/Redes.wav"
TrocarCena = true

[node name="Icone" parent="CaixaDialogo/Margem/Elementos/BotaoDireita/ConteinerVertical" index="0"]
margin_right = 223.0

[node name="Texto" parent="CaixaDialogo/Margem/Elementos/BotaoDireita/ConteinerVertical" index="1"]
margin_right = 223.0
text = "BotaoIr"

[node name="Texto" parent="." instance=ExtResource( 5 )]
visible = false
self_modulate = Color( 0.00784314, 0.333333, 0, 1 )
anchor_right = 1.0
margin_right = 0.0
margin_bottom = 151.0
text = "Tutorial"
align = 1
valign = 1

[node name="Animar" type="AnimationPlayer" parent="."]
autoplay = "Tutorial"
anims/Tutorial = SubResource( 4 )

[node name="TempoTutorialEscola1" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true
script = ExtResource( 19 )

[connection signal="timeout" from="TempoTutorialEscola1" to="TempoTutorialEscola1" method="_on_TempoTutorialEscola1_timeout"]

[editable path="Tela/Coluna/ListaBotoes/BotaoAceitar"]
[editable path="Tela/Coluna/ListaBotoes/BotaoRecusar"]
[editable path="CaixaDialogo"]
[editable path="CaixaDialogo/Margem/Elementos/BotaoEsquerda"]
[editable path="CaixaDialogo/Margem/Elementos/BotaoDireita"]
